--- a/style.css
+++ b/style.css
@@ -48,7 +48,10 @@ footer small {
     font-size: 0.8em;
     color: #666;
 }
-.username {
+.submitUsername {
     font-size: 20px;
-    height: 600px;    
+    height: 40px;    
+    padding: 5px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
 }
